--- a/filebeat/docs/modules/envoyproxy.asciidoc
+++ b/filebeat/docs/modules/envoyproxy.asciidoc
@@ -16,7 +16,7 @@ envoy proxy deployment in Kubernetes.
 [float]
 === Compatibility
 
-Although this module has been developed against Envoy proy 1.10.0 and Kubernetes v1.13.x, it is expected to work
+Although this module has been developed against Envoy proxy 1.10.0 and Kubernetes v1.13.x, it is expected to work
 with other versions of Envoy proxy and Kubernetes.
 
 [float]
