--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -32,6 +32,8 @@ https://github.com/elastic/beats/compare/v7.0.0...7.0[Check the HEAD diff]
 
 *Affecting all Beats*
 
+- Fix formatting for `event.duration`, "human readable" was not working well for this. {pull}11675[11675]
+
 *Auditbeat*
 
 *Filebeat*
