--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -82,6 +82,8 @@ https://github.com/elastic/beats/compare/v7.0.0...7.0[Check the HEAD diff]
 
 *Metricbeat*
 
+- Prevent the docker/memory metricset from processing invalid events before container start {pull}11676[11676]
+
 *Packetbeat*
 
 *Winlogbeat*
