--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -204,6 +204,9 @@ The supported processors are:
  * <<add-process-metadata,`add_process_metadata`>>
  * <<add-tags, `add_tags`>>
  * <<community-id,`community_id`>>
+ifeval::[("{beatname_lc}"=="filebeat") or ("{beatname_lc}"=="journalbeat")]
+* <<decode-csv-fields,`decode_csv_fields`>>
+endif::[]
  * <<decode-json-fields,`decode_json_fields`>>
  * <<dissect, `dissect`>>
  * <<processor-dns, `dns`>>
@@ -775,6 +778,49 @@ Adds the environment field to every event:
 }
 -------------------------------------------------------------------------------
 
+ifeval::[("{beatname_lc}"=="filebeat") or ("{beatname_lc}"=="journalbeat")]
+* <<decode-csv-fields,`decode_csv_fields`>>
+[[decode-csv-fields]]
+=== Decode CSV fields
+
+The `decode_csv_fields` processor decodes fields containing records in
+comma-separated format (CSV). It will output the values as an array of strings.
+This processor is only available for Filebeat and Journalbeat.
+
+[source,yaml]
+-----------------------------------------------------
+processors:
+ - decode_csv_fields:
+     fields:
+        message: decoded.csv
+     separator: ,
+     ignore_missing: false
+     overwrite_keys: true
+     trim_leading_whitespace: false
+     fail_on_error: true
+-----------------------------------------------------
+
+The `decode_csv_fields` has the following settings:
+
+`fields`:: This is a mapping from the source field containing the CSV data to
+           the destination field where the decoded array will be written.
+`separator`:: (Optional) Character to be used as a column separator.
+              The default is the comma character. For using a TAB character you
+              must set it to "\t".
+`ignore_missing`:: (Optional) Whether to ignore events which lack the source
+                   field. The default is false, which will fail processing of an
+                   event if `target` field is missing.
+`overwrite_keys`:: Whether the target field is overwritten if it
+                   already exists. The default is false, which will fail
+                   processing of an event when `target` already exists.
+`trim_leading_space`:: Whether extra space after the separator is trimmed from
+                       values. This works even if the separator is also a space.
+                       The default is false.
+`fail_on_error`:: (Optional) If set to true, in case of an error the changes to
+the event are reverted and the original event is returned. If set to false,
+processing continues also if an error happened during renaming. Default is `true`.
+
+endif::[]
 
 [[decode-json-fields]]
 === Decode JSON fields
