[7.x] Backport: Add release highlights

--- a/libbeat/docs/index.asciidoc
+++ b/libbeat/docs/index.asciidoc
@@ -27,6 +27,8 @@ include::./upgrading.asciidoc[]
 
 include::./config-file-format.asciidoc[]
 
+include::./highlights.asciidoc[]
+
 include::./release.asciidoc[]
 
 include::../../libbeat/docs/contributing-to-beats.asciidoc[]
