--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -46,6 +46,7 @@ https://github.com/elastic/beats/compare/v6.7.0...6.x[Check the HEAD diff]
 
 *Filebeat*
 
+- Fix goroutine leak happening when harvesters are dynamically stopped. {pull}11263[11263]
 - Don't apply multiline rules in Logstash json logs. {pull}11346[11346]
 
 *Heartbeat*
