--- a/libbeat/docs/upgrading.asciidoc
+++ b/libbeat/docs/upgrading.asciidoc
@@ -153,8 +153,8 @@ will not work on these fields until the conflicts are resolved.
 
 * *Some fields have name changes, but no type changes.* The field aliases
 created by the compatibility layer ensure that visualizations and aggregations
-on the old field names work on old and new data. 7.0 dashboards only
-work on the new field names, and therefore only work with the new data.
+on the old field names work on old and new data. 7.0 dashboards work
+only on new field names (and therefore only on new data).
 
 * *Some fields have both name and type changes.* Field aliases are created for
 these fields, but your {kib} visualizations and aggregations will not work on
