--- a/filebeat/module/elasticsearch/_meta/docs.asciidoc
+++ b/filebeat/module/elasticsearch/_meta/docs.asciidoc
@@ -36,9 +36,13 @@ Example config:
   server:
     enabled: true
     var.paths:
-      - /var/log/elasticsearch/*.log          # Plaintext format path
-      - /var/log/elasticsearch/*_server.json  # JSON format path
+      - /var/log/elasticsearch/*.log          # Plaintext logs
+      - /var/log/elasticsearch/*_server.json  # JSON logs
 ----
++
+NOTE: If you running against Elasticsearch >= 7.0.0, configure your
+`var.paths` setting to point to JSON logs. Otherwise, configure it
+to point to plaintext logs.
 
 [float]
 ==== `gc` log fileset settings
@@ -66,10 +70,14 @@ Example config:
 ----
   audit:
     var.paths:
-      - /var/log/elasticsearch/*_access.log  # Plaintext format path
-      - /var/log/elasticsearch/*_audit.log   # JSON format path
-      - /var/log/elasticsearch/*_audit.json  # JSON format path
+      - /var/log/elasticsearch/*_access.log  # Plaintext logs
+      - /var/log/elasticsearch/*_audit.log   # JSON logs
+      - /var/log/elasticsearch/*_audit.json  # JSON logs
 ----
++
+NOTE: If you running against Elasticsearch >= 7.0.0, configure your
+`var.paths` setting to point to JSON logs. Otherwise, configure it
+to point to plaintext logs.
 
 [float]
 ==== `slowlog` log fileset settings
@@ -82,11 +90,15 @@ Example config:
 ----
   slowlog:
     var.paths:
-      - /var/log/elasticsearch/*_index_search_slowlog.log     # Plaintext format path
-      - /var/log/elasticsearch/*_index_indexing_slowlog.log   # Plaintext format path
-      - /var/log/elasticsearch/*_index_search_slowlog.json    # JSON format path
-      - /var/log/elasticsearch/*_index_indexing_slowlog.json  # JSON format path
+      - /var/log/elasticsearch/*_index_search_slowlog.log     # Plaintext logs
+      - /var/log/elasticsearch/*_index_indexing_slowlog.log   # Plaintext logs
+      - /var/log/elasticsearch/*_index_search_slowlog.json    # JSON logs
+      - /var/log/elasticsearch/*_index_indexing_slowlog.json  # JSON logs
 ----
++
+NOTE: If you running against Elasticsearch >= 7.0.0, configure your
+`var.paths` setting to point to JSON logs. Otherwise, configure it
+to point to plaintext logs.
 
 [float]
 ==== `deprecation` log fileset settings
@@ -99,9 +111,13 @@ Example config:
 ----
   deprecation:
     var.paths:
-      - /var/log/elasticsearch/*_deprecation.log   # Plaintext format path
-      - /var/log/elasticsearch/*_deprecation.json  # JSON format path
+      - /var/log/elasticsearch/*_deprecation.log   # Plaintext logs
+      - /var/log/elasticsearch/*_deprecation.json  # JSON logs
 ----
++
+NOTE: If you running against Elasticsearch >= 7.0.0, configure your
+`var.paths` setting to point to JSON logs. Otherwise, configure it
+to point to plaintext logs.
 
 :has-dashboards!:
 
