Apply suggestions from code review
Co-Authored-By: ycombinator <ycombinator@gmail.com>

--- a/filebeat/docs/modules/elasticsearch.asciidoc
+++ b/filebeat/docs/modules/elasticsearch.asciidoc
@@ -41,13 +41,13 @@ Example config:
   server:
     enabled: true
     var.paths:
-      - /var/log/elasticsearch/*.log          # Plaintext logs
+      - /var/log/elasticsearch/*.log          # Plain text logs
       - /var/log/elasticsearch/*_server.json  # JSON logs
 ----
 +
-NOTE: If you running against Elasticsearch >= 7.0.0, configure your
+NOTE: If you're running against Elasticsearch >= 7.0.0, configure the
 `var.paths` setting to point to JSON logs. Otherwise, configure it
-to point to plaintext logs.
+to point to plain text logs.
 
 [float]
 ==== `gc` log fileset settings
@@ -75,14 +75,14 @@ Example config:
 ----
   audit:
     var.paths:
-      - /var/log/elasticsearch/*_access.log  # Plaintext logs
+      - /var/log/elasticsearch/*_access.log  # Plain text logs
       - /var/log/elasticsearch/*_audit.log   # JSON logs
       - /var/log/elasticsearch/*_audit.json  # JSON logs
 ----
 +
-NOTE: If you running against Elasticsearch >= 7.0.0, configure your
+NOTE: If you're running against Elasticsearch >= 7.0.0, configure the
 `var.paths` setting to point to JSON logs. Otherwise, configure it
-to point to plaintext logs.
+to point to plain text logs.
 
 [float]
 ==== `slowlog` log fileset settings
@@ -95,15 +95,15 @@ Example config:
 ----
   slowlog:
     var.paths:
-      - /var/log/elasticsearch/*_index_search_slowlog.log     # Plaintext logs
-      - /var/log/elasticsearch/*_index_indexing_slowlog.log   # Plaintext logs
+      - /var/log/elasticsearch/*_index_search_slowlog.log     # Plain text logs
+      - /var/log/elasticsearch/*_index_indexing_slowlog.log   # Plain text logs
       - /var/log/elasticsearch/*_index_search_slowlog.json    # JSON logs
       - /var/log/elasticsearch/*_index_indexing_slowlog.json  # JSON logs
 ----
 +
-NOTE: If you running against Elasticsearch >= 7.0.0, configure your
+NOTE: If you're running against Elasticsearch >= 7.0.0, configure the
 `var.paths` setting to point to JSON logs. Otherwise, configure it
-to point to plaintext logs.
+to point to plain text logs.
 
 [float]
 ==== `deprecation` log fileset settings
@@ -116,13 +116,13 @@ Example config:
 ----
   deprecation:
     var.paths:
-      - /var/log/elasticsearch/*_deprecation.log   # Plaintext logs
+      - /var/log/elasticsearch/*_deprecation.log   # Plain text logs
       - /var/log/elasticsearch/*_deprecation.json  # JSON logs
 ----
 +
-NOTE: If you running against Elasticsearch >= 7.0.0, configure your
+NOTE: If you're running against Elasticsearch >= 7.0.0, configure the
 `var.paths` setting to point to JSON logs. Otherwise, configure it
-to point to plaintext logs.
+to point to plain text logs.
 
 :has-dashboards!:
 
