--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -4,7 +4,7 @@
 :pull: https://github.com/elastic/beats/pull/
 
 === Beats version HEAD
-https://github.com/elastic/beats/compare/v6.7.2...6.x[Check the HEAD diff]
+https://github.com/elastic/beats/compare/v6.7.2...6.8[Check the HEAD diff]
 
 ==== Breaking changes
 
