--- a/libbeat/docs/version.asciidoc
+++ b/libbeat/docs/version.asciidoc
@@ -1,9 +1,9 @@
-:stack-version: 7.0.1
-:doc-branch: 7.0
+:stack-version: 7.1.0
+:doc-branch: 7.1
 :go-version: 1.11.5
-:release-state: released
+:release-state: unreleased
 :python: 2.7.9
 :docker: 1.12
 :docker-compose: 1.11
-:branch: 7.0
+:branch: 7.1
 :major-version: 7.x
