--- a/filebeat/docs/modules_list.asciidoc
+++ b/filebeat/docs/modules_list.asciidoc
@@ -24,6 +24,7 @@ This file is generated! See scripts/docs_collector.py
   * <<filebeat-module-osquery>>
   * <<filebeat-module-palo_alto>>
   * <<filebeat-module-postgresql>>
+  * <<filebeat-module-rabbitmq>>
   * <<filebeat-module-redis>>
   * <<filebeat-module-santa>>
   * <<filebeat-module-suricata>>
@@ -56,6 +57,7 @@ include::modules/nginx.asciidoc[]
 include::modules/osquery.asciidoc[]
 include::modules/palo_alto.asciidoc[]
 include::modules/postgresql.asciidoc[]
+include::modules/rabbitmq.asciidoc[]
 include::modules/redis.asciidoc[]
 include::modules/santa.asciidoc[]
 include::modules/suricata.asciidoc[]
