Change ignore_failure to fail_on_error to align with beat conventions

--- a/libbeat/docs/processors-using.asciidoc
+++ b/libbeat/docs/processors-using.asciidoc
@@ -928,7 +928,7 @@ processors:
         - {from: "src_ip", to: "source.ip", type: "ip"}
         - {from: "src_port", to: "source.port", type: "integer"}
       ignore_missing: true
-      ignore_failure: true
+      fail_on_error: false
 ----
 
 The `convert` processor has the following configuration settings:
@@ -945,8 +945,8 @@ type conversion.
 field when the `from` key is not found in the event. If false then the processor
 returns an error and does not process the remaining fields. Default is `false`.
 
-`ignore_failure`:: (Optional) If true type conversion failures are ignored and
-the processor continues to the next field. Default is `false`.
+`fail_on_error`:: (Optional) If false type conversion failures are ignored and
+the processor continues to the next field. Default is `true`.
 
 `tag`:: (Optional) An identifier for this processor. Useful for debugging.
 
