--- a/metricbeat/docs/running-on-docker.asciidoc
+++ b/metricbeat/docs/running-on-docker.asciidoc
@@ -19,7 +19,7 @@ docker run \
   --mount type=bind,source=/sys/fs/cgroup,target=/hostfs/sys/fs/cgroup,readonly \ <2>
   --mount type=bind,source=/,target=/hostfs,readonly \ <3>
   --net=host \ <4>
-  --user root --privileged \ <5>
+  --user root --cap-add sys_ptrace --cap-add dac_read_search \ <5>
   {dockerimage} -e -system.hostfs=/hostfs
 ----
 
@@ -44,8 +44,9 @@ flag. This is due to Linux namespacing; simply bind mounting the host's `/proc`
 to `/hostfs/proc` is not sufficient.
 <5> The <<metricbeat-metricset-system-socket,system socket metricset>> needs to
 read files from `/proc` that belong to multiple users. In order to access these
-files Metricbeat must be run as root in a privileged container. These options
-are not needed if this metricset is not used.
+files Metricbeat must be run as root in a container with `sys_ptrace` and
+`dac_read_search` capabilities. These options are not needed if this metricset
+is not used.
 
 NOTE: The special filesystems +/proc+ and +/sys+ are only available if the
 host system is running Linux. Attempts to bind-mount these filesystems will
