Clean up config checks / fix heartbeat NPE (#11165)
This fixes a bug where heartbeat would encounter an NPE while attempting to free resources during a config check and cleans up some internal interfaces.

This change lets beats choose whether their factories implement a special config check function. If not, it is assumed their creation function will return an error and that this can be used for checking the config. It is further assumed that creation with the factory is fully GC-able, which is not the case for heartbeat, hence the need for a custom CheckConfig method.

(cherry picked from commit dcce078f7af709049dfe49eccb748efde221b30d)

--- a/CHANGELOG-developer.next.asciidoc
+++ b/CHANGELOG-developer.next.asciidoc
@@ -23,3 +23,5 @@ The list below covers the major changes between 7.1.0 and master only.
 ==== Bugfixes
 
 ==== Added
+
+Added new CheckableRunnerFactory to more clearly delineate which RunnerFactory impls have checkable configs. {pull}12117[12117]
